# c4c

./: .gitignore  Makefile  README.md  ai.c  ai_bitboard.c  ai_realbitboard.c  ai_transposition_table  ai_transposition_table.c  ai_vs_ai  ai_vs_ai.c  build.sh  twoplayer  twoplayer.c
archives/: Makefile  ai.c  ai_bitboard.c  ai_realbitboard.c
cli/: Makefile
cli/includes/: logic.c
cli/src/: ai.c  logic.c  twoplayer.c
gui/: CMakeLists.txt  Makefile  README.md  c4c  logic.c  logic.h  main.c  render.c
gui-ai/: gui-ai.html  logic.c  logic.h  main.c
gui/includes/: logic.h  render.h
gui/src/: ai.c  logic.c  render.c  twoplayer.c
src/: Makefile  ai.c  logic.c  twoplayer.c
src/includes/: logic.h
